# cnlearn

./: .gitignore  .travis.yml  LICENSE  Plan.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: Dockerfile
.github/workflows/: pytest.yaml  pytest_extract.yaml
dict/: add_characters.py  add_words.py  db.py  db_models.py  extract.py  extract_test.py  pinyin_utils.py  test_db.py
dict/cedict/: license_cedict
src/: main.kv  main.py
src/cnlearn/db/: crud.py  settings.py
src/cnlearn/schemas/: structures.py
src/cnlearn/search/: dictionary.py
src/db/: crud.py  models.py  settings.py
src/dictionary/: __init__.py  defaultdictionary.py  dictionary.py  search.py  search_test.py  structures.py
src/gui/: prettify.py
src/schemas/: structures.py
src/search/: dictionary.py  textutils.py
src/tests/: test_crud.py  test_dictionary.py  test_schemas.py
tests/: test_crud.py  test_dictionary.py  test_schemas.py
