[metadata]
name = CNLearn
version = 0.0.3
author = Vlad Podgurschi
author_email = vlad+cnlearn@podgurschi.com
description = GUI/TUI maybe Chinese dictionary
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
package_dir=
    =src
packages=find:
install_requires =
    sqlalchemy
    pydantic
    jieba

[options.packages.find]
where=src
include_package_data = True 

[options.package_data]
* = *.db

[bdist_wheel]
universal=1

[flake8]
max-line-length=120
exclude =
    .git,
    __pycache__,
    venv,
    .venv,
